--- a/radeon-profile/debian/changelog
+++ b/radeon-profile/debian/changelog
@@ -1,3 +1,9 @@
+radeon-profile (0.2.8) bionic; urgency=emergency
+
+  *  Fix build 
+  
+ -- Goran Vidovic (gogo) <trebelnik2@gmail.com>  Fri, 6 Dec 2019 16:20:05 +0100
+
 radeon-profile (0.2.4) bionic; urgency=emergency
 
   * Change default config location to ~/.config.
